# ZenKit

./: .clang-format  .clang-tidy  .concourse-ci.yml  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  CNAME  changelog.md  contributing.md  index.html  license.md  lint.sh  mkdocs.yml  readme.md  sitemap.xml  test.cc
.github/workflows/: build.yml  docs.yml  lint.yml  tests.yml
SUMMARY/: index.html
assets/: daedalus.abnf  extern.d
assets/javascript/: extra.js
core/: CMakeLists.txt
core/include/phoenix/: animation.hh  archive.hh  font.hh  material.hh  mesh.hh  messages.hh  model_hierarchy.hh  model_mesh.hh  morph_mesh.hh  proto_mesh.hh  script.hh  softskin_mesh.hh  texture.hh  vdfs.hh  world.hh
core/include/phoenix/daedalus/: interpreter.hh  script.hh
core/include/phoenix/detail/: compat.hh  error.hh  stream.hh  types.hh
core/include/phoenix/math/: light_map.hh  obb.hh
core/include/phoenix/vm/: deadalus.hh
core/include/phoenix/world/: bsp_tree.hh  vob.hh  vob_tree.hh  way_net.hh  world_mesh.hh
core/source/: animation.cc  archive.cc  font.cc  material.cc  mesh.cc  messages.cc  model_hierarchy.cc  model_mesh.cc  morph_mesh.cc  proto_mesh.cc  script.cc  softskin_mesh.cc  texture.cc  vdfs.cc  world.cc
core/source/archive/: archive_ascii.cc  archive_ascii.hh  archive_binary.cc  archive_binary.hh  archive_binsafe.cc  archive_binsafe.hh
core/source/daedalus/: interpreter.cc  script.cc
core/source/detail/: compat.cc  stream.cc
core/source/vm/: daedalus.cc
core/source/world/: bsp_tree.cc  mesh.cc  vob_tree.cc  way_net.cc  world_mesh.cc
core/tests/: test_animation.cc  test_archive.cc  test_compat.cc  test_font.cc  test_material.cc  test_mesh.cc  test_model_hierarchy.cc  test_model_mesh.cc  test_proto_mesh.cc  test_runner.cc  test_script.cc  test_stream.cc  test_texture.cc  test_vdfs.cc  test_world.cc
core/tests/samples/: ascii.zen  binary.zen  material2_g1.mat  mesh0.mrm  secretdoor.mdm  smoke_waterpipe.mdm  world.zen.readme
core/tests/samples/basic.vdf.dir/: README.md  config.yml
core/tests/samples/basic.vdf.dir/licenses/: MIT.md
core/tests/samples/basic.vdf.dir/licenses/gpl/: LGPL-3.0.md
docs/: CNAME  SUMMARY.md  index.md
docs/engine/: datatypes.md  overview.md
engine/: CMakeLists.txt
engine/datatypes/: index.html
engine/objects/: _template.mdt  oCCSTrigger.yml  oCInfo.yml  oCInfoManager.yml  oCLogManager.yml  oCLogTopic.yml  oCMOB.yml  oCMissionManager.yml  oCMobBed.yml
engine/overview/: index.html
examples/: CMakeLists.txt  compile.cc  load_vdf.cc  load_zen.cc  run_interpreter.cc  zen2zen.cc
include/phoenix/: Vfs.hh  animation.hh  archive.hh  buffer.hh  font.hh  material.hh  math.hh  mesh.hh  messages.hh  model.hh  model_hierarchy.hh  model_mesh.hh  model_script.hh  morph_mesh.hh  phoenix.hh  proto_mesh.hh  save_game.hh  script.hh  softskin_mesh.hh  texture.hh  vdfs.hh  vm.hh  world.hh
include/zenkit/: Archive.hh  Boxes.hh  CutsceneLibrary.hh  DaedalusScript.hh  DaedalusVm.hh  Date.hh  Error.hh  Font.hh  Library.hh  Logger.hh  Material.hh  Mesh.hh  Misc.hh  Mmap.hh  Model.hh  ModelAnimation.hh  ModelHierarchy.hh  ModelMesh.hh  ModelScript.hh  MorphMesh.hh  MultiResolutionMesh.hh  Object.hh  SaveGame.hh  SoftSkinMesh.hh  Stream.hh  Texture.hh  Vfs.hh  World.hh
search/: search_index.json
source/: Vfs.cc  animation.cc  archive.cc  buffer.cc  font.cc  material.cc  math.cc  mesh.cc  messages.cc  model.cc  model_hierarchy.cc  model_mesh.cc  model_script.cc  model_script_dsl.cc  model_script_dsl.hh  morph_mesh.cc  phoenix.cc  proto_mesh.cc  save_game.cc  script.cc  softskin_mesh.cc  texture.cc  vdfs.cc  vm.cc  world.cc
source/archive/: archive_ascii.cc  archive_ascii.hh  archive_binary.cc  archive_binary.hh  archive_binsafe.cc  archive_binsafe.hh
source/daedalus/: interpreter.cc  script.cc  vm.cc
source/detail/: buffer.cc  compat.cc  stream.cc
source/ext/: daedalus_classes.cc  dds_convert.cc
source/vobs/: camera.cc  light.cc  misc.cc  mob.cc  sound.cc  trigger.cc  vob.cc  zone.cc
source/world/: bsp_tree.cc  vob_tree.cc  way_net.cc
src/: Archive.cc  Boxes.cc  CutsceneLibrary.cc  DaedalusScript.cc  DaedalusVm.cc  Date.cc  Error.cc  Font.cc  Internal.hh  Logger.cc  Material.cc  Mesh.cc  Misc.cc  MmapPosix.cc  MmapWin32.cc  Model.cc  ModelAnimation.cc  ModelHierarchy.cc  ModelMesh.cc  ModelScript.cc  ModelScriptDsl.cc  ModelScriptDsl.hh  MorphMesh.cc  MultiResolutionMesh.cc  Object.cc  SaveGame.cc  SoftSkinMesh.cc  Stream.cc  Texture.cc  Vfs.cc  World.cc  __legacy_buffer.cc
src/addon/: daedalus.cc  texcvt.cc
src/archive/: ArchiveAscii.cc  ArchiveAscii.hh  ArchiveBinary.cc  ArchiveBinary.hh  ArchiveBinsafe.cc  ArchiveBinsafe.hh
src/daedalus/: Compiler.cc  Module.cc  SyntaxTree.cc  Tokenizer.cc  Tokenizer.hh  Type.cc  TypeCheck.cc  (+3 more)
support/: BuildSupport.cmake
tests/: TestArchive.cc  TestCutsceneLibrary.cc  TestDaedalusCompiler.cc  TestDaedalusScript.cc  TestFont.cc  TestMaterial.cc  TestModel.cc  TestModelAnimation.cc  TestModelHierarchy.cc  TestModelMesh.cc  TestModelScript.cc  TestMorphMesh.cc  TestMultiResolutionMesh.cc  TestSaveGame.cc  TestStream.cc  TestTexture.cc  TestVfs.cc  TestVobsG1.cc  TestVobsG2.cc  TestWorld.cc  test_animation.cc  test_archive.cc  test_buffer.cc  test_compat.cc  test_font.cc  test_material.cc  test_messages.cc  test_model.cc  test_model_hierarchy.cc  test_model_mesh.cc  test_model_script.cc  test_morph_mesh.cc  test_proto_mesh.cc  test_save_game.cc  test_script.cc  test_stream.cc  test_texture.cc  test_vdfs.cc  test_vobs_g1.cc  test_vobs_g2.cc  (+1 more)
tools/: CMakeLists.txt
tools/pxinfo/: CMakeLists.txt  config.hh.in  main.cc
tools/pxscrdmp/: CMakeLists.txt  config.hh.in  decompiler.cc  main.cc
tools/pxtex/: CMakeLists.txt  config.hh.in  main.cc
tools/pxvdfs/: CMakeLists.txt  config.hh.in  main.cc
tools/zdump/: CMakeLists.txt  config.hh.in  dump.hh  dump_json.cc  dump_text.cc  main.cc
tools/zdump/util/: base64.cc  base64.hh
tools/zscript/: CMakeLists.txt  config.hh.in  decompiler.cc  decompiler.hh  main.cc
tools/zvdfs/: CMakeLists.txt  config.hh.in  main.cc
(+291 files in other folders)
